{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Camera",
            "id": "cbfbbca8-6b71-4932-b29e-91319514e543",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2c75cb7a-81bb-492e-9df5-e9f3b8a05e09",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "d30939e7-f67f-4150-9c9d-a592cec849d7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookDelta",
                    "type": "Value",
                    "id": "59919b89-5132-452b-8243-b472b37ea218",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateButton",
                    "type": "Button",
                    "id": "80e3d346-4a47-44ae-a8e8-cf16f3d8f842",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2029990b-00c9-4077-8007-91c606793dbe",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21dde11c-e78e-4726-945a-75ecc342176c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8fcea93-89f6-4851-816c-cf784c545e1a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc872430-1e05-44ac-88db-2f30aba56433",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}